# ocpi-pydantic

./: .gitignore  pylock.toml  pyproject.toml
notebooks/: 20250317-pydantic.ipynb
src/ocpi_pydantic/v221/: base.py  enum.py
src/ocpi_pydantic/v221/cdrs/: __init__.py
src/ocpi_pydantic/v221/commands/: __init__.py
src/ocpi_pydantic/v221/credentials/: __init__.py
src/ocpi_pydantic/v221/locations/: __init__.py  connector.py  evse.py  location.py
src/ocpi_pydantic/v221/sessions/: __init__.py
src/ocpi_pydantic/v221/tariffs/: __init__.py
src/ocpi_pydantic/v221/tokens/: __init__.py
src/ocpi_pydantic/v221/versions/: __init__.py
